lab_02/Private_Subnet.tf
resource "aws_subnet" "cba_private" {
  vpc_id     = aws_vpc.cba_vpc.id
  cidr_block = "10.0.2.0/24"
  map_public_ip_on_launch = "false"
  availability_zone = "eu-west-2a"

  tags = {
    Name = "ApachePrivateSubnet"
  }
}
