lab_02/security_group.tf
resource "aws_security_group" "cba_tf_sg" {
  vpc_id = aws_vpc.cba_vpc.id
  name   = "cba_tf_sg"
  dynamic "ingress" {
    for_each = var.rules
    content {
      from_port   = ingress.value["port"]
      to_port     = ingress.value["port"]
      protocol    = ingress.value["protocol"]
      cidr_blocks = ingress.value["cidr_blocks"]
    }
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "ApacheSG"
  }
}
